Centered html content and moved footer content below page VH

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,2 +1,8 @@
 @use 'base';
 @use 'layout';
+
+@use 'components/header';
+@use 'components/map';
+@use 'components/search-bar';
+@use 'components/search-results';
+@use 'components/footer';
