--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -57,3 +57,22 @@ p, h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+
+body .container {
+  min-height: 100vh;
+}
+
+header h1 {
+  text-align: center;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+}
+
+main .search-results-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
