--- a/styles/scss/components/_search-bar.scss
+++ b/styles/scss/components/_search-bar.scss
@@ -1,4 +1,25 @@
 .search-bar {
   display: flex;
   justify-content: center;
+  // width: 350px;
+
+  input {
+    padding-left: 20px;
+    width: 285px;
+    border: none;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .search-btn {
+    padding: 18px 22px 18px 22px;
+    background-color: black;
+    border: none;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
 }
