--- a/styles/scss/components/_search-results.scss
+++ b/styles/scss/components/_search-results.scss
@@ -3,5 +3,9 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 340px;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 10px;
   }
 }
