--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -2,21 +2,28 @@ body {
   font-family: 'Rubik', sans-serif;
 
   .container {
+    position: relative;
+
     .bg-banner {
       background-image: url('/images/pattern-bg.png');
       background-repeat: no-repeat;
       background-size: cover;
       height: 35vh;
-
-      header {
-        h1 {
-          color: white;
-        }
-      }
     }
 
-    #map {
-      height: 65vh;
+    main {
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      margin: auto;
+      text-align: center;
+      z-index: 100;
     }
+  }
+
+  #map {
+    height: 65vh;
+    z-index: 1;
   }
 }
