--- a/styles/scss/components/_search-results.scss
+++ b/styles/scss/components/_search-results.scss
@@ -1,11 +1,11 @@
 main {
   .search-results-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 340px;
-    margin: 0 auto;
-    background-color: white;
-    border-radius: 10px;
+    // display: flex;
+    // flex-direction: column;
+    // align-items: center;
+    // width: 340px;
+    // margin: 0 auto;
+    // background-color: white;
+    // border-radius: 10px;
   }
 }
