--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -1,3 +1,5 @@
+@use 'base';
+
 body {
   font-family: 'Rubik', sans-serif;
 
@@ -19,7 +21,16 @@ body {
       margin: auto;
       text-align: center;
       z-index: 100;
-    }
+
+      header {
+        margin: 20px 0 20px 0;
+
+        h2 {
+          color: white;
+          font-weight: 500;
+        }
+      }
+  }
   }
 
   #map {
