--- a/styles/scss/components/_search-bar.scss
+++ b/styles/scss/components/_search-bar.scss
@@ -1,10 +1,11 @@
 .search-bar {
   display: flex;
   justify-content: center;
+  margin-bottom: 20px;
 
   input {
     padding-left: 20px;
-    width: 285px;
+    width: 75%;
     border: none;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
