Changed map marker to custom SVG

--- a/styles/scss/_layout.scss
+++ b/styles/scss/_layout.scss
@@ -10,7 +10,7 @@ body {
       background-image: url('/images/pattern-bg.png');
       background-repeat: no-repeat;
       background-size: cover;
-      height: 291px; // height of <main> content - height of search-results-container
+      height: 291px; // height of <main> content minus the height of search-results-container
     }
 
     main {
