--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -1,5 +1,6 @@
 $very-dark-gray: hsl(0, 0%, 17%);
 $dark-gray: hsl(0, 0%, 59%);
 $text-input-font-size: 18px;
+$desktop-breakpoint: 992px;
 
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap');
